--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="orange_500">#E91E63</color>
+    <color name="blue">#4D88E1</color>
+    <color name="yelow">#EFDF54</color>
 </resources>
